deploy/scoreboard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scoreboard
  namespace: scoreboard
  labels:
    app.kubernetes.io/name: scoreboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: scoreboard
  ports:
    - name: http
      port: 80
      targetPort: 8000
